# GasStations

./: CMakeLists.txt  conanfile.py  config.json  main.cpp
inc/Connections/: Connection.h  TcpConnection.h  TcpServer.h  serialConnection.h
inc/DataBase/: TransactionControl.h
inc/Mediator/: ConcreateMediator.h  DB.h  Line.h  Mediator.h
inc/Mediator/columnMediator/: ColumnLine.h  ColumnWorker.h
inc/Mediator/jsonMediator/: JsonWorker.h  jsonLine.h
inc/Mediator/kassaMediator/: KassaWorker.h  Scenario.h
inc/Mediator/wamp/: wamp.h
inc/Protocols/ProtocolsMasters/: ProtocolMaster.h  ProtocolMasterAdast.h  ProtocolMasterShelf.h  ProtocolMasterUnipump.h
inc/Protocols/ProtocolsSlaves/: ProtocolSlave.h  ProtocolSlaveAdast.h  ProtocolSlaveJson.h  ProtocolSlaveShelf.h  ProtocolSlaveUnipump.h
inc/dataTypes/: FuelProduct.h  NozzleLogicState.h  StateMap.h
inc/dataTypes/requestDataTypes/: LogCmd.h  TechCmd.h  UniversalAuthorize.h  UniversalClose.h  UniversalCmd.h  UniversalPrice.cpp  UniversalPrice.h  UniversalSetPrice.h  UniversalTotal.cpp  UniversalTotal.h
inc/dataTypes/responseDataTypes/: UniversalAmount.h  UniversalAuthorizeConfirmation.cpp  UniversalAuthorizeConfirmation.h  UniversalGradesConfig.h  UniversalProducts.h  UniversalPumpsConfig.h  UniversalState.h  UniversalTech.h  UniversalTotals.h
inc/utils/: ColumnConfig.h  DirectoriesFiles.cpp  DirectoriesFiles.h  ReadersWritterLock.h  base64.h  logger.h  mxMap.h  mxQueue.h  ulibudev.h
lib/Simple-Web-Server-3.0.0-rc2/: server_http.hpp
src/Connections/: Connection.cpp  TcpConnection.cpp  TcpServer.cpp  serialConnection.cpp
src/DataBase/: TransactionControl.cpp
src/Mediator/: ConcreateMediator.cpp  DB.cpp  Line.cpp  jsonLine.cpp
src/Mediator/columnMediator/: ColumnLine.cpp  ColumnWorker.cpp
src/Mediator/jsonMediator/: JsonWorker.cpp
src/Mediator/kassaMediator/: KassaWorker.cpp  Scenario.cpp
src/Mediator/wamp/: wamp.cpp
src/Protocols/ProtocolsMasters/: ProtocolMaster.cpp  ProtocolMasterAdast.cpp  ProtocolMasterShelf.cpp  ProtocolMasterUnipump.cpp
src/Protocols/ProtocolsSlaves/: ProtocolSlave.cpp  ProtocolSlaveAdast.cpp  ProtocolSlaveJson.cpp  ProtocolSlaveShelf.cpp  ProtocolSlaveUnipump.cpp
src/Utils/: logger.cpp
src/dataTypes/: FuelProduct.cpp  NozzleLogicState.cpp  StateMap.cpp  UniversalData.cpp
src/dataTypes/requestDataTypes/: LogCmd.cpp  TechCmd.cpp  UniversalAuthorize.cpp  UniversalClose.cpp  UniversalCmd.cpp  UniversalSetPrice.cpp
src/dataTypes/responseDataTypes/: UniversalAmount.cpp  UniversalConfig.cpp  UniversalProducts.cpp  UniversalPumpsConfig.cpp  UniversalState.cpp  UniversalTech.cpp  UniversalTotals.cpp
